[package]
name = "rusty-rocket"
version = "0.1.0"
authors = ["rainer"]
edition = "2018"

[dependencies]
# Rocket built from main already runs with stable
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }